--- a/Index.html
+++ b/Index.html
@@ -36,14 +36,6 @@
                     alert(result);
                 });
 
-                $("#add_1_to").click(function () {
-                    var n = prompt("Add number to be added");
-                    n = Number.parseInt(n);
-                    var result = homework.add_1_to(n)
-                    console.log(result);
-                    alert(result);
-                });
-
 
                 $("#choose_operation").click(function () {
                     var n = prompt("Add number to be added");
@@ -65,19 +57,19 @@
                     alert(result);
                 });
 
-                $("#reverse_list").click(function () {
+                $("#reverse_list").click(function (list) {
                     var list =
                         prompt("Add numbers  to reverse list:" +
                             "ex : 4, 5, 9, 8, 7");
                     list = JSON.parse("[" + list + "]");
-                    var result = homework.get_max_number(list);
+                    var result = homework.reverse_list(list);
                     console.log(result);
                     alert(result);
                 });
 
                 $("#Is_Exist").click(function () {
                     var list =
-                        prompt("Add numbers  to reverse list:" +
+                        prompt("Add numbers  to list:" +
                             "ex : 4, 5, 9, 8, 7");
                     list = JSON.parse("[" + list + "]");
 
@@ -106,7 +98,7 @@
                         prompt("Add first list:" +
                             "ex : 4, 5, 9, 8, 7");
                     var list2 =
-                        prompt("Add first list:" +
+                        prompt("Add second list:" +
                             "ex : 4, 5, 9, 8, 7");
 
                     list1 = JSON.parse("[" + list1 + "]");
